[gd_scene load_steps=3 format=3 uid="uid://b78f84jo8hjrm"]

[ext_resource type="Script" uid="uid://d4k7hngfehr6y" path="res://scripts/game/junction.gd" id="1_10nf7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_61rqc"]
size = Vector2(64, 64)

[node name="Junction" type="Area2D"]
script = ExtResource("1_10nf7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_61rqc")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
color = Color(0.489622, 0.489622, 0.489622, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
